[metadata]
name = plover_vim
version = 0.1.3
description = (mostly) single stroke vim commands
long_description = file: README.md
long_description_content_type = text/markdown
author = Josiah Tan
license = GNU General Public License v3 (GPLv3)
url = https://github.com/Josiah-tan/plover-vim
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin vim

[options]
zip_safe = True
install_requires = 
    plover>=4.0.0.dev8
	plover-python-dictionary-lib~=0.4
packages = find:


[options.packages.find]
include = plover_vim*
